--- a/documentation/package.json
+++ b/documentation/package.json
@@ -15,21 +15,22 @@
   },
   "bin": "./.bin/bin.js",
   "dependencies": {
-    "@docusaurus/core": "^3.1.0",
-    "@docusaurus/preset-classic": "^3.1.0",
-    "@docusaurus/theme-live-codeblock": "^3.1.0",
-    "@docusaurus/theme-mermaid": "^3.1.0",
-    "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.1.1",
+    "@docusaurus/core": "3.1.1",
+    "@docusaurus/preset-classic": "3.1.1",
+    "@docusaurus/theme-live-codeblock": "^3.1.1",
+    "@docusaurus/theme-mermaid": "^3.1.1",
+    "@mdx-js/react": "^3.0.0",
+    "clsx": "^2.0.0",
     "docusaurus2-dotenv-2": "^1.4.1",
     "plugin-image-zoom": "flexanalytics/plugin-image-zoom",
-    "prism-react-renderer": "^1.3.3",
+    "prism-react-renderer": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "redocusaurus": "^1.3.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^3.1.0"
+    "@docusaurus/module-type-aliases": "^3.1.1",
+    "@docusaurus/types": "3.1.1"
   },
   "browserslist": {
     "production": [
