--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "react-scripts test --env=jsdom",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
   },
   "author": "",
   "license": "ISC",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "css-loader": "^6.10.0",
+    "prettier": "^3.2.5",
     "style-loader": "^3.3.4"
   }
 }
